lots more updates
Signed-off-by: Aaron Cupp <mrcupp@mrcupp.com>

--- a/app/assets/css/site.css
+++ b/app/assets/css/site.css
@@ -16816,12 +16816,12 @@ readers do not read off random characters that represent icons */
   font-family: Futura-Bold;
   src: url(../fonts/Futura-Bold.otf);
 }
-h1, .h1 {
-  font-family: Futura-Bold;
+h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
+  font-family: Hack;
 }
 
 p {
-  font-family: Futura-Bold;
+  font-family: Hack;
 }
 
 .social-button {
@@ -16841,9 +16841,9 @@ p {
   color: #2867B2;
 }
 
-.logo-main {
-  width: 50%;
-  height: 50%;
+.esp-logo {
+  width: 20%;
+  height: 20%;
 }
 
 .logo-footer {
@@ -16859,6 +16859,10 @@ p {
   background-color: #a4cef8;
 }
 
+.site-container-text {
+  font-family: Hack;
+}
+
 .site-footer {
   background-color: #a4f8c4;
 }
@@ -16872,7 +16876,7 @@ p {
 }
 
 .site-header-text {
-  font-family: Futura-Bold;
+  font-family: Hack;
 }
 
 .site-navigation {
@@ -16880,5 +16884,5 @@ p {
 }
 
 .footer {
-  font-family: Futura-Bold;
+  font-family: Hack;
 }
