--- a/app/assets/scss/_variables.scss
+++ b/app/assets/scss/_variables.scss
@@ -3,3 +3,5 @@ $social_button_bg: #898F9C;
 $facebook_blue:  #4267B2;
 $instagram_pink: #C13584;
 $linkedin_blue: #2867B2;
+$github_brown: #AD5C51;
+$soundcloud_orange: #FF9533;
