--- a/sitecode/layouts/partials/head_custom.html
+++ b/sitecode/layouts/partials/head_custom.html
@@ -18,4 +18,4 @@ Or you can delete these file if you don't need it.
 -->
 
 <!-- Include the font "Hack" via web cdn -->
-<link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
+<link rel='stylesheet' href='assets/css/hack.css'>
