--- a/sitecode/layouts/partials/head_custom.html
+++ b/sitecode/layouts/partials/head_custom.html
@@ -19,3 +19,5 @@ Or you can delete these file if you don't need it.
 
 <!-- Include the font "Hack" via web cdn -->
 <link rel='stylesheet' href='assets/css/hack.css'>
+<!-- Include our overrides / customs css -->
+<link rel='stylesheet' href='assets/css/custom.css'>
